force-app/main/default/objects/CP_Category__c/CP_Category__c.object-meta.xml
<CustomObject>
    <description>This object maintains the CP Category based on CP as well as project wise</description>
    <label>CP Category</label>
    <nameField>
        <displayFormat>CPC-{000000}</displayFormat>
        <label>CP Category</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>CP Category</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>