force-app/main/default/objects/CP_Category__c/fields/Booking_Active__c.field-meta.xml
<CustomField>
    <fullName>Booking_Active__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Booking active in 60d</label>
    <type>Checkbox</type>
</CustomField>