force-app/main/default/objects/CP_Category__c/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <label>Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>P1</fullName>
            </value>
            <value>
                <fullName>P2</fullName>
            </value>
            <value>
                <fullName>P3</fullName>
            </value>
            <value>
                <fullName>P4</fullName>
                <default>true</default>
                <label>P4</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>