force-app/main/default/objects/CP_Category__c/fields/Project__c.field-meta.xml
<CustomField>
    <fullName>Project__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Project</label>
    <referenceTo>Project__c</referenceTo>
    <relationshipLabel>CP Category</relationshipLabel>
    <relationshipName>CP_Category</relationshipName>
    <type>Lookup</type>
</CustomField>