force-app/main/default/objects/CP_Category__c/fields/Relevant_FY__c.field-meta.xml
<CustomField>
    <fullName>Relevant_FY__c</fullName>
    <label>Relevant FY</label>
    <length>5</length>
    <type>Text</type>
</CustomField>