force-app/main/default/objects/CP_Category__c/fields/Sourcing_Manager__c.field-meta.xml
<CustomField>
    <fullName>Sourcing_Manager__c</fullName>
    <label>Sourcing Manager</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>A Aakash Tripathi</fullName>
            </value>
            <value>
                <fullName>A Abhijeet Gaikwad</fullName>
            </value>
            <value>
                <fullName>A Abhik Nandy</fullName>
            </value>
            <value>
                <fullName>A Abhishek Dani</fullName>
            </value>
            <value>
                <fullName>A Adarsh Pandey</fullName>
            </value>
            <value>
                <fullName>Aakash Chavan</fullName>
            </value>
            <value>
                <fullName>A Akash Malik</fullName>
            </value>
            <value>
                <fullName>A Akhilesh Yadav</fullName>
            </value>
            <value>
                <fullName>A Amit Sachde</fullName>
            </value>
            <value>
                <fullName>A Anamika Dixit</fullName>
            </value>
            <value>
                <fullName>A Anam Khan</fullName>
            </value>
            <value>
                <fullName>A Arjun K. Relwani</fullName>
            </value>
            <value>
                <fullName>Aashima Shaikh</fullName>
            </value>
            <value>
                <fullName>Aashima Sheikh</fullName>
            </value>
            <value>
                <fullName>A Ashish Bodwani</fullName>
            </value>
            <value>
                <fullName>A Ashish Pal</fullName>
            </value>
            <value>
                <fullName>A Ashok Rathod</fullName>
            </value>
            <value>
                <fullName>A Asim Master</fullName>
            </value>
            <value>
                <fullName>A Ayesha Shaikh</fullName>
            </value>
            <value>
                <fullName>Abdullah Hafiz</fullName>
            </value>
            <value>
                <fullName>Abhay Ghogare</fullName>
            </value>
            <value>
                <fullName>Abhijit Karande</fullName>
            </value>
            <value>
                <fullName>Abhik Nandy</fullName>
            </value>
            <value>
                <fullName>Abhiram Kuchibhatla</fullName>
            </value>
            <value>
                <fullName>Abhishek Dash</fullName>
            </value>
            <value>
                <fullName>Abhishek Gowda</fullName>
            </value>
            <value>
                <fullName>Abhishek Kalelkar</fullName>
            </value>
            <value>
                <fullName>Abhishek Parmar</fullName>
            </value>
            <value>
                <fullName>Abhishek Sonawane</fullName>
            </value>
            <value>
                <fullName>Abhishek Varma</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>