force-app/main/default/objects/CP_Category__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Channel_Partner__c</columns>
    <columns>Project__c</columns>
    <columns>Category__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>